# django-celery-using

./: .env  README.md  compose.yml  pyproject.toml  requirements.txt
core/: tasks.py  views.py
projeto/: celery.py  settings.py  urls.py
staticfiles/: staticfiles.json
