[tool.poetry]
name = "django-celery"
version = "0.1.0"
description = ""
authors = ["Victor Augusto <victor.oliveira@onidata.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
python-decouple = "^3.8"
dj-database-url = "^2.1.0"
psycopg2 = "^2.9.9"
gunicorn = "^21.2.0"
redis = "^5.0.1"
celery = "^5.3.6"
django-celery-results = "^2.5.1"
django-celery-beat = "^2.5.0"
whitenoise = "^6.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
